--- a/package.json
+++ b/package.json
@@ -5,22 +5,23 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^35.2.0",
     "@ckeditor/ckeditor5-react": "^5.0.2",
-    "@reduxjs/toolkit": "^1.8.5",
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.5",
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.2",
+    "bootstrap": "^5.1.3",
     "ckeditor5-custom-build-full": "^1.0.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.5.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.1",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
