--- a/nlp_flask_server/requirements.txt
+++ b/nlp_flask_server/requirements.txt
@@ -10,6 +10,7 @@ flask-restx==1.0.5
 flask-sqlacodegen==1.1.8
 Flask-SQLAlchemy==3.0.2
 greenlet==2.0.2
+gunicorn==20.1.0
 importlib-metadata==6.0.0
 importlib-resources==5.10.2
 inflect==6.0.2
